refactor(orders): refactorización de servicios